# extanalyzer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-01-19-extension-analyzer-design.md  2026-01-19-extension-analyzer-implementation.md  2026-01-19-sandbox-deobfuscation-design.md  2026-01-19-sandbox-deobfuscation-implementation.md  2026-01-20-dark-pattern-detection-design.md  2026-01-20-dark-pattern-detection-implementation.md  2026-01-20-sandbox-endpoint-analysis-design.md  2026-01-20-sandbox-endpoint-analysis-implementation.md  2026-03-01-agentic-finding-review-design.md  2026-03-01-agentic-finding-review-implementation.md
src/: analyze.rs  download.rs  input.rs  lib.rs  main.rs  output.rs  unpack.rs
src/analyze/: code_extractor.rs  dark_patterns.rs  javascript.rs  manifest.rs  mod.rs  patterns.rs  sandbox_analysis.rs
src/download/: chrome.rs  firefox.rs  mod.rs
src/input/: mod.rs
src/llm/: agents.rs  mod.rs  provider.rs  review_agent.rs  tools.rs
src/models/: endpoint.rs  extension.rs  finding.rs  mod.rs
src/output/: mod.rs  terminal.rs
src/sandbox/: mocks.rs  mod.rs  runtime.rs  trace.rs
src/unpack/: crx.rs  mod.rs  xpi.rs
tests/: dark_pattern_tests.rs  download_tests.rs  finding_tests.rs  input_tests.rs  javascript_tests.rs  llm_sandbox_integration_test.rs  manifest_tests.rs  review_agent_tests.rs  sandbox_analysis_tests.rs  sandbox_tests.rs  unpack_tests.rs
