[package]
name = "extanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP & downloading
reqwest = { version = "0.12", features = ["json", "stream"] }

# Archive handling
zip = "2.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JavaScript parsing
oxc_parser = "0.56"
oxc_ast = "0.56"
oxc_allocator = "0.56"
oxc_span = "0.56"

# LLM integration
rig-core = "0.6"

# Pattern matching
regex = "1"
once_cell = "1"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
