[package]
name = "extanalyzer"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP & downloading
reqwest = { version = "0.13", features = ["json", "stream"] }
async-trait = "0.1"

# Archive handling
zip = "7.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JavaScript parsing
oxc_parser = "0.110"
oxc_ast = "0.110"
oxc_allocator = "0.110"
oxc_span = "0.110"

# LLM integration
rig-core = "0.28"

# Pattern matching
regex = "1"
once_cell = "1"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"
textwrap = "0.16"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File utilities
walkdir = "2"
tempfile = "3"
termimad = "0.34.1"
rquickjs = { version = "0.11.0", features = ["bindgen", "parallel"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
